--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,16 @@ body, html {
   width: 100%;
   height: 100%;
   text-align: center;
+  background-color: #121212;
+  color: #f5f5f5;
 }
 
 .app {
-  max-width: 800px; 
+  max-width: 75%; 
+  width: 75%;
   margin: 0 auto; 
   padding: 20px;
   padding-top: 100px;
+  box-sizing: border-box;
+  background-color: #121212;
 }
