--- a/src/components/Search/index.css
+++ b/src/components/Search/index.css
@@ -1,5 +1,7 @@
 .search-wrapper {
   width: 100%;
+  max-width: 250px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
