--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -236,7 +236,7 @@
 /* Responsive */
 @media (max-width: 768px) {
   .home-container {
-    padding-top: 60vh;
+    padding-top: 2rem;
     padding: 1.5rem;
   }
   
